# fplay

./: .gitignore  BUILD  MODULE.bazel  README.md  fplay.cpp  fplay.h
packaging/: README.packaging.md  build-deb.sh  build-rpm.sh  fplay.spec
